--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -8,8 +8,7 @@ header {
   @include mq(medium){
     height: 250px;
     transform-origin: left bottom;
-
-
+    
 
   }
 
@@ -28,7 +27,7 @@ header {
   display: inline-block;
   cursor: pointer;
   @extend %center;
-  transform: translateY(50%);
+  transform: translateY(50%) skewY(2deg);
 }
 
 
@@ -41,6 +40,7 @@ nav {
   opacity: 0;
   pointer-events: none;
   cursor: inherit;
+  transform: skewY(2deg);
   & li {
     transition: transform 2s ease-in;
     border-bottom: 1px solid #fff;
